<resources>
    <string name="app_name">News</string>

    <!--  Navigation string resources  -->
    <string name="title_news_fragment">Home</string>
    <string name="title_fav_fragment">Favorite</string>
    <string name="title_search_fragment">Search</string>
    <string name="title_setting_fragment">Setting</string>

    <!--  SearchFragment string resources  -->
    <string name="text_empty_list">Couldn\'t find anything..</string>
    <string name="hint_search_edit">Enter a title ot author..</string>

    <!--  SettingsFragment string resources  -->
    <string name="title_sf">Setting Page: Choose your preferred theme light - dark or default system theme and customize font type and size, any applied changes in this settings page will immediately take effect the application.</string>
    <string name="title_setting_theme">Choose your Preferred Theme</string>
    <string name="text_rb_light">Light theme</string>
    <string name="text_rb_dark">Dark theme</string>
    <string name="text_rb_system">System theme</string>
</resources>