<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_sf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_sf"
            android:lineSpacingExtra="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_setting_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/title_setting_theme"
            app:layout_constraintEnd_toEndOf="@+id/title_sf"
            app:layout_constraintTop_toBottomOf="@+id/title_sf"
            app:layout_constraintStart_toStartOf="@+id/title_sf" />

        <RadioGroup
            android:id="@+id/radio_group_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/title_setting_theme"
            app:layout_constraintTop_toBottomOf="@+id/title_setting_theme"
            app:layout_constraintStart_toStartOf="@+id/title_setting_theme">

            <RadioButton
                android:id="@+id/rb_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rb_light"/>

            <RadioButton
                android:id="@+id/rb_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rb_dark"/>

            <RadioButton
                android:id="@+id/rb_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rb_system"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>